# logical-formula-handler

./: CMakeLists.txt  README.md  expression_generator.cpp  formula_calculator.cpp  main.cpp
